fix;Fixes a minor style issue in info-panel overflow

--- a/src/components/trace/trace.scss
+++ b/src/components/trace/trace.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   width: 100%;
   height: fit-content;
-  min-height: 32px;
 
   &-header {
     display: flex;
